--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
         <button class='start'>Klick to Start</button>
         <div class='score'>MyScore: <span>0</span></div>
         <div class='grid'>
+            <div class='snake'></div>
+            <div class='apple'></div>
         </div>
     </body>
 </html>
