--- a/index.html
+++ b/index.html
@@ -1,17 +1,18 @@
 <!DOCTYPE html>
-<html>
-    <head>
-        <meta charset="utf-8">
-        <script src='app.js'></script>
-        <link rel='stylesheet' href='style.css'/>
-        <title>Snaky Snake</title>
-    </head>
-    <body>
-        <button class='start'>Klick to Start</button>
-        <div class='score'>MyScore: <span>0</span></div>
-        <div class='grid'>
-            <div class='snake'></div>
-            <div class='apple'></div>
-        </div>
-    </body>
+<html lang="en" dir="ltr">
+  <head>
+    <meta charset="utf-8">
+    <script src="app.js" charset="utf-8"></script>
+    <link rel="stylesheet" href="style.css">
+    <title>Snake Tutorial</title>
+  </head>
+  <body>
+
+    <button class='start'>Start/Restart</button>
+    <div class='score'>Score: <span></span></div>
+
+    <div class='grid'>
+    </div>
+
+  </body>
 </html>
